HREPTWO-16: accept some findbugs recommendations
- make inner classes static where possible
- make null checks correct in comparators

svn path=/hippo-ecm/trunk/; revision=18658